--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
+<!-- i am a comedic genius -->
+<title>AOC</title>
+<link rel="icon" type="image/x-icon" href="images/favicon.svg">
 <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Alexandria_Ocasio-Cortez_Official_Portrait.jpg">
